examples/file-uploader.html migrate styles to examples/file-uploader.css

--- a/examples/file-upload.html
+++ b/examples/file-upload.html
@@ -1,60 +1,6 @@
+<link rel=stylesheet href=file-upload.css>
+
 <template>
-
-<style>
-
-  file-upload input[type=file] {
-    opacity: 0;
-    z-index: -1;
-    width: 0.1px;
-    height: 0.1px;
-    overflow: hidden;
-    position: absolute
-  }
-
-  file-upload input[type=file] + label {
-    display: block;
-    padding: 2em 0;
-    cursor: pointer;
-    font-size: 1.25em;
-    text-align: center;
-    color: rgba(20,20,20,0.6);
-    background-color: rgba(240,240,240, 0.8)
-  }
-
-  file-upload input[type=file] + label:hover
-    { background-color: rgba(240,240,240, 1.0) }
-
-  file-upload table.file-upload-list
-    { width: 300px }
-
-  file-upload table td.file-remove-cell {
-    cursor: pointer;
-    padding-left: 20px;
-    color: rgb(200, 0, 0);
-  }
-
-  file-upload table td.file-remove-cell:hover a
-    { color: rgb(240, 0, 0); }
-
-  file-upload a.file-upload-clear {
-    cursor: pointer;
-    background-color: rgb(140, 0, 0);
-    color: rgb(200, 200, 200);
-    padding: 5px 20px;
-    font-size: 0.75em;
-  }
-
-  file-upload a.file-upload-clear:hover {
-   background-color: rgb(160, 0, 0);
-   color: rgb(240, 240, 240);
-  }
-
-  file-upload a.file-upload-clear:active {
-    color: rgba(120, 120, 120, 1);
-    border-bottom: none;
-  }
-
-</style>
 
 <datalist id="file-upload-whitelist">
   <option value="app-pdf.png"   label="application/pdf">
