Migrate examples/file-uploader.html into examples/file-uploader component

--- a/examples/file-upload/template.html
+++ b/examples/file-upload/template.html
@@ -1,4 +1,6 @@
-<link rel=stylesheet href=file-upload.css>
+<link rel=stylesheet href=./style.css>
+
+<script nomodule src=https://unpkg.com/snuggsi/snuggsi.js></script>
 
 <template>
 
