--- a/examples/uploader.html
+++ b/examples/uploader.html
@@ -13,7 +13,7 @@
   <h2>&lt;file-uploader&gt;</h2>
 </hgroup>
 
-<link rel=import href=file-upload.html>
+<link rel=import href=file-upload/template.html>
 
 <file-upload></file-upload>
 
