Prepare for settings

--- a/examples/file-uploader/index.html
+++ b/examples/file-uploader/index.html
@@ -13,7 +13,7 @@
   <h2 slot=header>&lt;file-uploader&gt;</h2>
 </header-group>
 
-  <file-upload>
+  <file-upload label='Click to upload files'>
 
     <!--
       `<option>` - https://developer.mozilla.org/en-US/docs/Web/HTML/Element/option
