--- a/examples/file-uploader/template.html
+++ b/examples/file-uploader/template.html
@@ -8,9 +8,9 @@
 <!-- form needed for backwards compatibility & for `<button type=reset>` -->
 <form action=#>
 
-  <label title='Click to upload files'>
+  <label title={label}>
 
-    Click to upload files
+    {label}
 
     <!--
     `<input type=file list=datalist.id>`
