Test onclick events for template

--- a/examples/header-group.html
+++ b/examples/header-group.html
@@ -19,6 +19,10 @@ header-group {
   Element `header-group`
 
   (class extends HTMLElement {
+    static onfoo (event) {
+      console.log (event)
+    }
+
     intialize ()
       { console.warn ('Whatever') }
   })
