Use minified ES library

--- a/examples/header-group.html
+++ b/examples/header-group.html
@@ -3,7 +3,7 @@
 
 <title>&lt;header-group&gt;</title>
 
-<script nomodule src=../snuggsi.js></script>
+<script nomodule src=../dist/snuggsi.min.es></script>
 
 <!-- optionally batteries-included -->
 <style>
