--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -11,8 +11,7 @@
 
 </style>
 
-<script type=module src=https://unpkg.com/snuggsi/snuggsi.es></script>
-<script nomodule    src=https://unpkg.com/snuggsi/snuggsi.js></script>
+<script nomodule    src=../snuggsi.min.js></script>
 <script nomodule    src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
 
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
