--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -15,6 +15,7 @@
 
 </style>
 
+<script nomodule src=../snuggsi.min.js></script>
 <script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
 
 <!-- import works inline body -->
