Update infinity calendar component

--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -11,8 +11,8 @@
 
 </style>
 
-<script nomodule src=../snuggsi.min.js></script>
 <script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule src=../dist/snuggsi.es></script>
 
 <!-- import works inline body -->
 <link rel=import href=header-group.html>
