Still attepting HTMLinkElement.onload

--- a/examples/header-group.html
+++ b/examples/header-group.html
@@ -22,7 +22,7 @@ header-group {
     }
 
     static onfoo (event) {
-      console.log (event)
+      console.log ('onfoo', event)
     }
 
     intialize ()
