--- a/index.html
+++ b/index.html
@@ -22,3 +22,18 @@
 </hgroup>
 
 <hello-world></hello-world>
+
+<aside>
+<nav>
+<!-- https://skatejs.gitbooks.io/skatejs/content -->
+  <a href=#introduction>Introduction</a>
+  <a href=#installation>Installation</a>
+  <a href=#examples>Examples</a>
+  <a href=#conventions>Conventions</a>
+  <a href=#events>Events</a>
+  <a href=#tokens>Tokens</a>
+  <a href=#slots>Slots</a>
+  <a href=#interfaces>Interfaces</a>
+  <a href=#lifecycle>Lifecycle</a>
+</nav>
+</aside>
