--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
 <hello-world></hello-world>
 
-<aside>
 <nav>
 <!-- https://skatejs.gitbooks.io/skatejs/content -->
   <a href=#introduction>Introduction</a>
@@ -36,4 +35,8 @@
   <a href=#interfaces>Interfaces</a>
   <a href=#lifecycle>Lifecycle</a>
 </nav>
-</aside>
+
+<section view id=slots>
+  http://blog.aurelia.io/2016/05/23/aurelia-shadow-dom-v1-slots-prerelease
+</section>
+
