--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -19,7 +19,7 @@
 <script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
 
 <!-- import works inline body -->
-<link rel=import href=header-group.html>
+<link async rel=import href=header-group.html>
 
 <link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
 
