Refactor examples/header-group.html

--- a/examples/header-group.html
+++ b/examples/header-group.html
@@ -12,7 +12,7 @@ header-group {
 }
 </style>
 
-<template onclick=onfoo>
+<template>
 
   <hgroup>
     <h1><a href=/examples/index.html>snuggsi ツ</a></h1>
