Update example links

--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -12,7 +12,7 @@
 </style>
 
 <script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule src=../dist/snuggsi.es></script>
+<script nomodule src=https://unpkg.com/snuggsi.min.es></script>
 
 <!-- import works inline body -->
 <link rel=import href=header-group.html>
