--- a/examples/link-import.html
+++ b/examples/link-import.html
@@ -1,6 +1,10 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
+
+<script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule src=https://unpkg.com/snuggsi/snuggsi.min.js></script>
+
 <link rel=import href=header-group.html>
 
 <title>snuggsi ツ - Header Group</title>
