Update example links

--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -15,8 +15,8 @@
 
 </style>
 
-<script nomodule src=../dist/snuggsi.es></script>
 <script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule src=https://unpkg.com/snuggsi.min.es></script>
 
 <!-- import works inline body -->
 <link async rel=import href=header-group.html>
