Update example locations

--- a/examples/autocomplete.html
+++ b/examples/autocomplete.html
@@ -5,9 +5,8 @@
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
-<script type=module src=https://unpkg.com/snuggsi/snuggsi.es></script>
-<script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule src=https://unpkg.com/snuggsi/snuggsi.js></script>
+<script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
 
 <header-group>
   <h2 slot=header>Autocomplete Dropdown</h2>
