--- a/examples/party-line.html
+++ b/examples/party-line.html
@@ -5,8 +5,8 @@
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
-<script nomodule    src=https://unpkg.com/snuggsi/snuggsi.js></script>
-<script nomodule    src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
 
 <header-group>
   <h2 slot=header>
