--- a/examples/add-subtract.html
+++ b/examples/add-subtract.html
@@ -5,9 +5,8 @@
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
-<script nomodule    src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule    src=http://unpkg.com/snuggsi/snuggsi.js></script>
-<script type=module src=http://unpkg.com/snuggsi/snuggsi.es></script>
+<script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
 
 <header-group>
   <h2 slot=header>Counter</h2>
