--- a/examples/flashy.html
+++ b/examples/flashy.html
@@ -29,8 +29,8 @@
   }
 </style>
 
-<script src=/examples/webcomponents-hi-ce.js></script>
-<script src=../dist/snuggsi.es></script>
+<script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
 
 <link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
