--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -15,8 +15,8 @@
 
 </style>
 
-<script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule src=https://unpkg.com/snuggsi.min.es></script>
+<script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
 
 <!-- import works inline body -->
 <link async rel=import href=header-group.html>
