--- a/examples/index.html
+++ b/examples/index.html
@@ -9,9 +9,8 @@
 <link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
-<script type=module src=https://unpkg.com/snuggsi/snuggsi.es></script>
-<script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule src=https://unpkg.com/snuggsi/snuggsi.js></script>
+<script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
 
 <title>snuggsi - examples</title>
 
