--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
 <script nomodule    src=//unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule    src=//unpkg.com/snuggsi/snuggsi.js></script>
+<script nomodule    src=//unpkg.com/snuggsi/snuggsi.min.js></script>
 
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
