Reorder import on example/index.html

--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,6 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
-<link rel=import href=header-group.html>
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
 <link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
@@ -11,6 +10,8 @@
 
 <script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
 <script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
+
+<link async rel=import href=header-group.html>
 
 <title>snuggsi - examples</title>
 
