Update file uploader

--- a/examples/file-uploader/index.html
+++ b/examples/file-uploader/index.html
@@ -5,8 +5,11 @@
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
+<script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
+
 <link rel=import href=../header-group.html>
-<link rel=import id=file-upload href=template.html>
+<link rel=import id=file-upload href=./template.html>
 
 
 <header-group>
