--- a/examples/file-uploader/template.html
+++ b/examples/file-uploader/template.html
@@ -1,9 +1,8 @@
 <link rel=stylesheet href=style.css>
 
-<script nomodule src=../../snuggsi.js></script>
 <script nomodule src=script.es></script>
 
-<template onclick=foo>
+<template>
 
 <!-- form needed for backwards compatibility & for `<button type=reset>` -->
 <form action=#>
