Update markup and documentation for examples/file-uploader

--- a/examples/file-uploader/index.html
+++ b/examples/file-uploader/index.html
@@ -25,9 +25,9 @@
     `HTTP/MIME` types - https://developer.mozilla.org/en-US/docs/Web/HTTP/Basics_of_HTTP/MIME_types
   -->
 
+  <!-- Remove <datalist> for png support -->
   <datalist slot=mimetypes id=mimetypes>
-    <!-- restricted list -->
-    <option value=text/plain,text/html,text/css,text/javascript label=text-plain.png disabled> txt
+    <option accept=image/jpg label=JPEG Files>
   </datalist>
 
 </file-upload>
