--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -21,6 +21,9 @@
 
 <header-group>
   <h2 slot=header>Infinity Calendar</h2>
+  <p  slot=subheader>
+    <a target=external href=http://jessewolgamott.com/react-calendar-table-example>react-calendar-table-example</a>
+  </p>
 </header-group>
 
 http://teuxdeux.com
