Add more styling for infinity calendar

--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -21,12 +21,14 @@
 
 <header-group>
   <h2 slot=header>Infinity Calendar</h2>
-  <p  slot=subheader>
-    <a target=external href=http://jessewolgamott.com/react-calendar-table-example>react-calendar-table-example</a>
-  </p>
+  <ul slot=subheader>
+    <li>
+      <a target=external href=http://jessewolgamott.com/react-calendar-table-example>react-calendar-table-example</a>
+    <li>
+      <a target=external href=http://teuxdeux.com>http://teudeux.com</a>
+  </ul>
 </header-group>
 
-http://teuxdeux.com
 
 <infinity-calendar>
 
