Only use day number in example/infinity-calendar.html

--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -53,7 +53,7 @@
 
   <template name=days>
     <a href=#{day} onclick=ondayclick>
-      <time datetime>Day {day}</time>
+      <time datetime>{day}</time>
     </a>
   </template>
 
