Add Brackets around examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -29,31 +29,31 @@
 
 <ul>
   <li>
-    <a href=hello-world.html>Hello World</a>
+    <a href=hello-world.html>&lt;hello-world&gt;</a>
 
   <li>
-    <a href=link-import.html>Simple Template Import</a>
+    <a href=link-import.html>&lt;Simple Template Import&gt;</a>
 
   <li>
-    <a href=flashy.html>flashy</a>
+    <a href=flashy.html>&lt;flashy&gt;</a>
 
   <li>
-    <a href=add-subtract.html>add subtract</a>
+    <a href=add-subtract.html>&lt;add-subtract&gt;</a>
 
   <li>
-    <a href=infinity-calendar.html>infinity calendar</a>
+    <a href=infinity-calendar.html>&lt;infinity-calendar&gt;</a>
 
   <li>
-    <a href=filter.html>filter</a>
+    <a href=filter.html>&lt;filter&gt;</a>
 
   <li>
-    <a href=input-output.html>input output</a>
+    <a href=input-output.html>&lt;input-output&gt;</a>
 
   <li>
-    <a href=autocomplete.html>autocomplete</a>
+    <a href=autocomplete.html>&lt;autocomplete&gt;</a>
 
   <li>
-    <a href=party-line.html>party-line</a>
+    <a href=party-line.html>&lt;party-line&gt;</a>
 
 </ul>
 
