Rename examples/flashy -> examples/x-flashy

--- a/examples/x-flashy.html
+++ b/examples/x-flashy.html
@@ -36,7 +36,8 @@
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
 <header-group>
-  <h2 slot=header>Components can be as flashy as you want</h2>
+  <h2 slot=header>&lt;x-flashy&gt;</h2>
+  <h3 slot=subheader>Components can be as flashy as you want</h3>
 </header-group>
 <!-- import works inline body -->
 <link rel=import href=header-group.html>
