Add Brackets around examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -32,10 +32,10 @@
     <a href=hello-world.html>&lt;hello-world&gt;</a>
 
   <li>
-    <a href=link-import.html>&lt;Simple Template Import&gt;</a>
+    <a href=link-import.html>&lt;link-import&gt;</a>
 
   <li>
-    <a href=flashy.html>&lt;flashy&gt;</a>
+    <a href=x-flashy.html>&lt;x-flashy&gt;</a>
 
   <li>
     <a href=add-subtract.html>&lt;add-subtract&gt;</a>
