--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -24,7 +24,7 @@
 <link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
 
 <header-group>
-  <h2 slot=header>Minimal is easy</h2>
+  <h2 slot=header>&lt;hello-world&gt;</h2>
 </header-group>
 
 <hello-world>
