Add HTML brackets to examples/add-subtract

--- a/examples/add-subtract.html
+++ b/examples/add-subtract.html
@@ -9,7 +9,7 @@
 <script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
 
 <header-group>
-  <h2 slot=header>Counter</h2>
+  <h2 slot=header>&lt;add-subtract&gt;</h2>
 </header-group>
 <!-- import works inline body -->
 <link rel=import href=header-group.html>
