--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -20,7 +20,7 @@
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
 <header-group>
-  <h2 slot=header>Infinity Calendar</h2>
+  <h2 slot=header>&lt;Infinity-Calendar&gt;</h2>
   <ul slot=subheader>
     <li>
       <a target=external href=http://jessewolgamott.com/react-calendar-table-example>react-calendar-table-example</a>
